[gd_scene load_steps=2 format=3 uid="uid://bygx6as0frs7w"]

[ext_resource type="Script" uid="uid://dv7mori5nctkp" path="res://Scrips/Helpers/pickup.gd" id="1_yvtkl"]

[node name="Pickup" type="Area2D"]
script = ExtResource("1_yvtkl")

[node name="Sprite2D" type="Sprite2D" parent="."]

[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_area_shape_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
